--- a/cssandhtml/index.html
+++ b/cssandhtml/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,7 +22,7 @@
           <input type="text" id="title" />
 
           <label for="content">Content</label>
-          <textarea type="text" id="content"></textarea>
+          <textarea id="content"></textarea>
             <button type="button">Add</button>
         </form>
       </section>
@@ -29,48 +30,48 @@
       <article>
         <h2>My todos</h2>
 
-        <span class="flexibox">
-          <span class="item">
+        <div class="flexibox">
+          <div class="item">
               <h2>Todotitle</h2>
               <p>I'm a baby sricacha hot chicken mixtape pabst organic air...</p>
               <button type="button">Add</button>
-          </span>
-          <span class="item">
+          </div>
+          <div class="item">
             <h2>Todotitle</h2>
             <p>I'm a baby sricacha hot chicken mixtape pabst organic air...</p>
             <button type="button">Add</button>
-        </span>
-        <span class="item">
+        </div>
+        <div class="item">
             <h2>Todotitle</h2>
             <p>I'm a baby sricacha hot chicken mixtape pabst organic air...</p>
             <button type="button">Add</button>
-        </span>
-        <span class="item">
+        </div>
+        <div class="item">
             <h2>Todotitle</h2>
             <p>I'm a baby sricacha hot chicken mixtape pabst organic air...</p>
             <button type="button">Add</button>
-        </span>
-        <span class="item">
+        </div>
+        <div class="item">
             <h2>Todotitle</h2>
             <p>I'm a baby sricacha hot chicken mixtape pabst organic air...</p>
             <button type="button">Add</button>
-        </span>
-        <span class="item">
+        </div>
+        <div class="item">
             <h2>Todotitle</h2>
             <p>I'm a baby sricacha hot chicken mixtape pabst organic air...</p>
             <button type="button">Add</button>
-        </span>
-        <span class="item">
+        </div>
+        <div class="item">
             <h2>Todotitle</h2>
             <p>I'm a baby sricacha hot chicken mixtape pabst organic air...</p>
             <button type="button">Add</button>
-        </span>
-        <span class="item">
+        </div>
+        <div class="item">
             <h2>Todotitle</h2>
             <p>I'm a baby sricacha hot chicken mixtape pabst organic air...</p>
             <button type="button">Add</button>
-        </span>
-        </span>
+        </div>
+        </div>
       </article>
     </main>
   </body>
